<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.iurimenin.habittrainer.CreateHabitActivity">

    <EditText
        android:id="@+id/editTextTitle"
        android:hint="@string/eat_an_apple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextDescription"
        android:lines="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/an_apple_description"/>

    <Button
        android:id="@+id/buttonChooseImage"
        android:text="@string/choose_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageViewImage"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/selected_image"/>

    <Button
        android:id="@+id/buttonSave"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/textViewError"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/error_color"/>
</LinearLayout>
